--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,5 @@
 .jumbotron{
-    background-color: orange;
+    background-color: rgb(75, 143, 221);
     color: black;
 }
 
@@ -16,14 +16,14 @@
 
 footer{
     padding: 10px 10px 0 10px;
-    background-color: yellow;
+    background-color: rgb(0, 255, 213);
 
     margin-bottom: 0px;
     margin-top: 10px;
 }
 
-.card-hotel{
-    flex: 1 150px; /*el 1 hace referencia a la propiedad de flex wrap (cuanto queremos que crezca el elemento, si le pongo 2 el elemento puede ocupar el
+.car-alq{
+    flex: 1 200px; /*el 1 hace referencia a la propiedad de flex wrap (cuanto queremos que crezca el elemento, si le pongo 2 el elemento puede ocupar el
     doble de ancho, el 150 es la propiedad flex basics pages que indica cual es el ancho definido)*/
     padding: 2px 5px 2px 5px ;
     margin-top: 10px
@@ -31,4 +31,10 @@ footer{
 }
 .btn-reserva{
     width: 100%;
+}
+.col-encabezado{
+    padding: 2px 10px 2px 10px;
+}
+.auto{
+    color: rgb(0, 3, 185);
 }
