--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -1,4 +1,6 @@
 $yellow: #fffa19;
+$red: #ff0000;
+$green:#007510 ;
 $celeste: #4b8fdd;
 $celesteclaro: #73b9ca;
 $whitesmoke: #f5f5f5;
@@ -8,7 +10,7 @@ $white: #ffffff;
 
 //si quiero cambiar los colores lo hago acá, luego hago npm run scss y se aplica el cambio al style.css
 
-@mixin margenes($top, $bottom, $left, $right) {
+@mixin margenes($top: 0px, $bottom: 0px, $left: 0px, $right: 0px) {
     margin-top: $top;
     margin-bottom: $bottom;
     margin-left: $left;
@@ -39,7 +41,7 @@ $white: #ffffff;
 footer{
     padding: 10px 10px 0 10px;
     background-color: $celesteclaro;
-    @include margenes(10px, 0px ,0px, 0px);
+    @include margenes(10px);
 }
 
 .car-alq{
@@ -51,7 +53,7 @@ footer{
 
 .espacioregistro{
     margin-top: 20px;
-    @include margenes(20px, 0px, 0px, 0px);
+    @include margenes(20px);
 }
 
 .btn-reserva{
@@ -70,7 +72,7 @@ footer{
     margin-right: 20px;
 }
 .mapas{
-    margin-bottom: 10px;
+    @include margenes(0px,10px)
 }
 .popover {
     background-color: $whitesmoke;
